--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,12 +12,11 @@ base: core18
 
 parts:
   nsm:
-    plugin: ''
+    plugin: make
     source-type: tar
     source: https://gitlab.com/nifty-site-manager/nsm-snap/-/archive/master/nsm-snap-master.tar
     build-packages:
     - g++
-    - make
 
 apps:
   nsm:
