--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -13,8 +13,8 @@ base: core18
 parts:
   nsm:
     plugin: make
-    source-type: tar
-    source: https://gitlab.com/nifty-site-manager/nsm-snap/-/archive/master/nsm-snap-master.tar
+    source-type: zip
+    source: https://github.com/nifty-site-manager/nsm-snapcraft/archive/master.zip
     build-packages:
     - g++
 
