--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -14,7 +14,7 @@ parts:
   nsm:
     plugin: make
     source-type: tar
-    source: https://github.com/nifty-site-manager/nsm-snap/raw/master/nsm-v1.0.tar
+    source: https://github.com/nifty-site-manager/nsm-snap/raw/master/nsm.tar
     build-packages:
     - g++
 
