--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -17,11 +17,7 @@ parts:
     source: https://github.com/nifty-site-manager/nsm-snap/raw/master/nsm.tar
     build-packages:
     - g++
-    - gettext 
-    - libssl-dev
-    - libexpat1-dev
     stage-packages:
-    - gettext
     - libcurl4-openssl-dev 
     - git
 
@@ -33,5 +29,5 @@ apps:
       DISABLE_WAYLAND: '1'
       GIT_TEMPLATE_DIR: $SNAP/usr/share/git-core/templates
       GIT_CONFIG_NOSYSTEM: "true"
-      GIT_EXEC_PATH: $SNAP/libexec/git-core
+      GIT_EXEC_PATH: $SNAP/user/share/git-core
       GIT_TEXTDOMAINDIR: $SNAP/usr/share/locale
