--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -19,7 +19,7 @@ parts:
     - g++
     stage-packages:
     - libcurl4-openssl-dev 
-    - git-all
+    - git-core
 
 apps:
   nsm:
@@ -28,6 +28,4 @@ apps:
       LD_LIBRARY_PATH: $SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/pulseaudio
       DISABLE_WAYLAND: '1'
       GIT_TEMPLATE_DIR: $SNAP/usr/share/git-core/templates
-      GIT_CONFIG_NOSYSTEM: "true"
-      GIT_EXEC_PATH: $SNAP/libexec/git-core
-      GIT_TEXTDOMAINDIR: $SNAP/usr/share/locale
+      GIT_EXEC_PATH: $SNAP/usr/lib/git-core
