testing private false in snapcraft.yaml file

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -8,6 +8,7 @@ description: |
   generator and dynamic/static site manager. 
   See https://nift.cc.
 
+private: false
 confinement: strict
 base: core18
 
