--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -18,7 +18,9 @@ parts:
     source: https://github.com/nifty-site-manager/nsm-snap/raw/master/nsm.tar
     build-packages:
     - g++
+    - libssl-dev
     stage-packages:
+    - libcurl4-openssl-dev 
     - git-core
 
 apps:
