--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -7,7 +7,7 @@ description: |
   and LaTeX-like command-line dynamic/static site
   manager/generator. See https://nift.cc.
 
-confinement: strict
+confinement: devmode
 base: core18
 
 parts:
@@ -18,7 +18,7 @@ parts:
     build-packages:
     - g++
     stage-packages:
-    - git-all
+    - git-core
 
 apps:
   nsm:
