Nift (aka nsm) v1.10 - added @system & @systemout syntax to templating language and pre/post build/serve script support

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -9,7 +9,7 @@ description: |
   and LaTeX-like command-line dynamic and static site 
   generator. See https://nift.cc.
 
-confinement: classic
+confinement: strict
 base: core18
 
 parts:
