Nift (aka nsm) v1.17 - changed std::endl to n when writing to file, changed pages set to pointer in PageBuilder.h, added/improved Nift commands new-template, new-site-dir, new-cont-dir, new-cont-ext, new-page-ext, added @systemcontent(sys-call) syntax to template language, fixed bug with @system, @systemoutput, @Script, @scriptoutput syntax

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,15 +1,14 @@
 name: nift
 version: '1.17'
-summary: dynamic/static site generator
+summary: website generator
 license: MIT
 description: |
-  `snap install nift`
+  `snap install nift --classic`
   
-  Nift (aka nsm) is a cross-platform open source git-like
-  and LaTeX-like command-line dynamic and static site 
-  generator. See https://nift.cc.
+  Nift (aka nsm) is a cross-platform open source 
+  command-line website generator. See https://nift.cc.
 
-confinement: strict
+confinement: classic
 base: core18
 
 parts:
