--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,7 +12,9 @@ confinement: classic
 base: core18
 
 architectures:
-  - build-on: [armhf, amd64, i386]
+  - build-on: armhf
+  - build-on: amd64
+  - build-on: i386
     run-on: all
 
 parts:
