--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,9 +12,7 @@ confinement: classic
 base: core18
 
 architectures:
-  - build-on: armhf
-  - build-on: amd64
-  - build-on: i386
+  - build-on: [amd64, armhf, i386]
     run-on: all
 
 parts:
