--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,7 +12,11 @@ confinement: classic
 base: core18
 
 architectures:
-  - build-on: [amd64, armhf, i386]
+  - build-on: amd64
+    run-on: all
+  - build-on: armhf
+    run-on: all
+  - build-on: i386
     run-on: all
 
 parts:
