--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: nift
-version: '2.3.1'
+version: '2.3.2'
 summary: website generator
 license: MIT
 description: |
@@ -14,7 +14,7 @@ base: core18
 architectures:
   - build-on: amd64
   - build-on: armhf
-    run-on: [arm64, armhf]
+  - build-on: arm64
   - build-on: i386
 
 parts:
